--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -19,6 +19,7 @@
     position: relative;
     margin-bottom: 20px;
     padding: 20px;
+    color: #282828;
 }
 
 .speechBubbleTailBottom {
@@ -31,7 +32,7 @@
     border-top: 20px solid #dddde1;
 }
 
-.introduction{
+.introduction {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -43,17 +44,31 @@
     transition: .2s;
 }
 
-.introduction img:hover{
+.introduction img:hover {
     width: 31rem;
     animation: snapRotate 4s steps(6) infinite;
 }
 
 @keyframes snapRotate {
-    0% { transform: rotate(0deg); }
-    16.67% { transform: rotate(20deg); }
-    33.34% { transform: rotate(-20deg); }
-    50% { transform: rotate(20deg); }
-    66.67% { transform: rotate(-20deg); }
-    83.34% { transform: rotate(20deg); }
-    100% { transform: rotate(0deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    16.67% {
+        transform: rotate(20deg);
+    }
+    33.34% {
+        transform: rotate(-20deg);
+    }
+    50% {
+        transform: rotate(20deg);
+    }
+    66.67% {
+        transform: rotate(-20deg);
+    }
+    83.34% {
+        transform: rotate(20deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
 }
