--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@
     font-weight: 400;
 
     color-scheme: light dark;
-    color: #282828;
+    color: #DDDDE1;
     background-color: #242424;
 
     font-synthesis: none;
