--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,15 @@
+@font-face {
+    font-family: Satoshi;
+    src: url(../assets/fonts/Satoshi.ttf);
+}
+
+@font-face {
+    font-family: ClashDisplay;
+    src: url(../assets/fonts/ClashDisplay.ttf);
+}
+
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: Satoshi, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
 
@@ -18,6 +28,7 @@ a {
     color: #646cff;
     text-decoration: inherit;
 }
+
 a:hover {
     color: #535bf2;
 }
@@ -31,6 +42,15 @@ body {
 h1 {
     font-size: 3.2em;
     line-height: 1.1;
+    font-weight: 800;
+}
+
+p {
+    font-weight: 500;
+}
+
+h3 {
+    font-family: ClashDisplay, sans-serif;
 }
 
 button {
@@ -44,9 +64,11 @@ button {
     cursor: pointer;
     transition: border-color 0.25s;
 }
+
 button:hover {
     border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
@@ -57,9 +79,11 @@ button:focus-visible {
         color: #213547;
         background-color: #ffffff;
     }
+
     a:hover {
         color: #747bff;
     }
+
     button {
         background-color: #f9f9f9;
     }
