--- a/src/styles/ProjectCards.css
+++ b/src/styles/ProjectCards.css
@@ -18,6 +18,7 @@
 
 .projectCard:hover {
     box-shadow: rgba(0, 0, 0, 0.25) 0 14px 28px;
+    transform: translateY(-3px);
 }
 
 .projectCard:hover img {
@@ -39,6 +40,10 @@
 }
 
 .pink-background {
+    background-color: #d392df;
+}
+
+.pink-background:hover {
     background-color: #f1a8ff;
 }
 
