--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,6 +3,7 @@
     width: auto;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     transition: .2s;
     margin-bottom: 3rem;
 }
@@ -11,8 +12,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    gap: 2.5rem;
+    justify-content: space-between;
     padding: 1rem;
 }
 
