media query on profile picture

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,7 +6,8 @@
 }
 
 .pfp {
-    width: 40%;
+    height: 35dvh;
+    width: auto;
     border-radius: 50%;
     margin-top: .5rem;
     margin-bottom: 1rem;
@@ -69,6 +70,11 @@
 }
 
 @media only screen and (orientation: portrait) {
+    .pfp {
+        width: 40%;
+        height: auto;
+    }
+
     .introduction {
         flex-direction: column;
     }
