--- a/src/styles/ProjectCards.css
+++ b/src/styles/ProjectCards.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 2rem;
     gap: 1rem
 }
 
@@ -30,7 +29,7 @@
 }
 
 .small-card {
-    width: 30%;
+    width: calc(40% - 1rem);
 }
 
 @media only screen and (orientation: portrait) {
