--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -27,7 +27,7 @@
     padding: .8rem;
     text-decoration: none;
     color: inherit;
-    transition: color 0.3s ease, background-color 0.3s ease, border-radius 0.3s ease, padding 0.3s ease;
+    transition: 0.4s ease;
 }
 
 .navbar a:hover {
