--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,9 +40,7 @@ body {
 }
 
 h1 {
-    font-size: 2rem;
-    line-height: 1.1;
-    font-weight: 800;
+    font-family: ClashDisplay, sans-serif;
 }
 
 p {
