--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -74,17 +74,17 @@ button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
 }
 
-/*@media (prefers-color-scheme: light) {*/
-/*    :root {*/
-/*        color: #213547;*/
-/*        background-color: #ffffff;*/
-/*    }*/
+@media (prefers-color-scheme: light) {
+    :root {
+        color: #213547;
+        background-color: #ffffff;
+    }
 
-/*    a:hover {*/
-/*        color: #747bff;*/
-/*    }*/
+    a:hover {
+        color: #747bff;
+    }
 
-/*    button {*/
-/*        background-color: #f9f9f9;*/
-/*    }*/
-/*}*/
+    button {
+        background-color: #f9f9f9;
+    }
+}
